added share group service tests